--- a/src/components/register/register.module.scss
+++ b/src/components/register/register.module.scss
@@ -1,7 +1,9 @@
-.login {
+.register {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   text-align: center;
 }
+
+// TODO: Move this to general styles
